--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run tests
-      run: python -m pytest
+      run: python -m pytest src
 
     - name: Train model
       run: python src/train.py
